@@ -1,3 +1,7 @@
+2012-01-19 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.5-01
+   * R/mcsamp: add mcsamp() back, though it is not working.
+
 2011-11-21 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 1.4-14
    * R/.onAttach: fix the NOTE issue
